--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "devDependencies": {
+    "@types/lodash": "^4.14.149",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "typescript": "^3.7.5"
   },
   "dependencies": {
+    "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
